# api

./: .env.example  .gitignore  .local.env  CLAUDE.md  Dockerfile  Dockerfile.test  IMAGE_OPTIMIZATION_README.md  MACHINE_DEACTIVATION.md  README.md  autumn.config.ts  docker-compose.test.yml  docker-compose.yml  drizzle.config.ts  image_optimization_fix_summary.md  localtunnel.mjs  migrate-clickhouse.mts  migrate.mts  package.json  pr_description.md  pyproject.toml  pytest.ini  requirements-test.txt  schema.ts  test-clickhouse.mts
.github/workflows/: ci.yml  claude.yml
drizzle/: 0050_clean_forge.sql  0051_zippy_wolfpack.sql  0052_old_madelyne_pryor.sql  0053_ordinary_leopardon.sql  0054_daily_energizer.sql  0055_flawless_baron_zemo.sql  0056_rich_daimon_hellstrom.sql  0057_quiet_surge.sql  0058_dashing_gorilla_man.sql  0059_slippery_mephistopheles.sql  0061_stormy_scourge.sql  0062_chief_mauler.sql  0063_greedy_morlun.sql  0064_milky_paladin.sql  0065_flowery_jane_foster.sql  0066_lyrical_midnight.sql  0067_steady_ricochet.sql  0068_cynical_justice.sql  0069_fair_nightmare.sql  0070_pale_wallop.sql  0071_nervous_iron_lad.sql  0072_overconfident_stephen_strange.sql  0073_mighty_major_mapleleaf.sql  0074_parched_karma.sql  0075_burly_deadpool.sql  0076_mute_marten_broadcloak.sql  0077_cheerful_the_call.sql  0078_nosy_loki.sql  0079_dapper_stature.sql  0080_groovy_serpent_society.sql  0081_illegal_prowler.sql  0082_lyrical_prodigy.sql  0083_sad_dust.sql  0084_reflective_moondragon.sql  0085_first_juggernaut.sql  0086_moaning_otto_octavius.sql  0087_cynical_sunspot.sql  0088_curved_tyrannus.sql  0089_flowery_human_torch.sql  0090_luxuriant_owl.sql  (+120 more)
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  0013_snapshot.json  0014_snapshot.json  0015_snapshot.json  0016_snapshot.json  0017_snapshot.json  0018_snapshot.json  0019_snapshot.json  0020_snapshot.json  0021_snapshot.json  0022_snapshot.json  0023_snapshot.json  0024_snapshot.json  0025_snapshot.json  0026_snapshot.json  0027_snapshot.json  0028_snapshot.json  0029_snapshot.json  0030_snapshot.json  0031_snapshot.json  0032_snapshot.json  0033_snapshot.json  0034_snapshot.json  0035_snapshot.json  0036_snapshot.json  0037_snapshot.json  0038_snapshot.json  0039_snapshot.json  (+165 more)
src/: deploy.py
src/api/: __init__.py  api.test.ts  autumn_mount.py  clickhouse.py  database.py  db.sql  models.py  router.py  server.py  sqlmodels.py  test_api.py
src/api/middleware/: auth.py  authMiddleware.py  autumnAccessMiddleware.py  spendLimitMiddleware.py  subscriptionMiddleware.py
src/api/modal/: builder.py
src/api/routes/: admin.py  ai.py  auth_response.py  autumn_webhook.py  clerk_webhook.py  log.py  (+24 more)
src/clickhouse/: README.md  atlas.hcl  schema.sql
src/deployed/: base_app.py  comfy_utils.py  docker.py
src/modal_apps/: anycomfyui.py  extra_model_paths.yaml  flux-dev.py  flux-schnell.py  flux_dev_comfyui.py  image_optimizer.py  modal_downloader.py  modal_file_uploader.py  sd3_5.py  sd3_5_comfyui.py  session_manager.py  test.py
src/modal_downloader/: modal_downloader.py
(+43 files in other folders)
